[project]
name = "glm-cli-git"
version = "0.1.0"
description = "Wrap claude/codex/opencode with Z.ai GLM settings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer"]

[project.scripts]
glm-launch = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]
sources = ["src"]
