[project]
name = "glm-launch"
version = "2026.6.2"
description = "Wrap claude/codex/opencode with Z.ai GLM settings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer"]

[project.urls]
Homepage = "https://github.com/jefftriplett/glm-launch"
Repository = "https://github.com/jefftriplett/glm-launch"
Issues = "https://github.com/jefftriplett/glm-launch/issues"

[project.scripts]
glm-launch = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]
sources = { "src" = "" }

[tool.bumpver]
current_version = "2026.6.2"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
push = false  # disabled for GitHub Actions
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
